@@ -735,6 +735,47 @@ mb_wm_is_my_window (MBWindowManager *wm,
 
 #if ENABLE_COMPOSITE
 
+static void
+mb_wm_unredirect_client (MBWindowManager *wm,
+                         MBWindowManagerClient *client)
+{     
+   if (client->xwin_frame)
+   {
+     XCompositeUnredirectWindow (wm->xdpy, client->xwin_frame,
+                                 CompositeRedirectManual);
+     XCompositeUnredirectSubwindows (wm->xdpy, client->xwin_frame,
+                                     CompositeRedirectManual);
+     XCompositeRedirectWindow (wm->xdpy, client->xwin_frame,
+                               CompositeRedirectAutomatic);
+   }
+   else
+   {
+     XCompositeUnredirectWindow (wm->xdpy, client->window->xwindow,
+                                 CompositeRedirectManual);
+     XCompositeUnredirectSubwindows (wm->xdpy, client->window->xwindow,
+                                     CompositeRedirectManual);
+   }
+}
+
+void
+mb_wm_setup_redirection (MBWindowManager *wm, int redirection)
+{
+  Window root_win = wm->root_win->xwindow;
+
+  if (redirection)
+  {
+    XCompositeRedirectSubwindows (wm->xdpy, root_win,
+                                  CompositeRedirectManual);
+    wm->non_redirection = False;
+  }
+  else
+  {
+    XCompositeUnredirectSubwindows (wm->xdpy, root_win,
+                                    CompositeRedirectManual);
+    wm->non_redirection = True;
+  }
+}
+
 /*  For the compositing engine we need to track overide redirect
  *  windows so the compositor can paint them.
  */
@@ -785,6 +826,9 @@ mb_wm_handle_map_notify   (XMapEvent  *xev,
 	       */
 	      mb_wm_client_reset_hiding_from_desktop (client);
 	    }
+
+          if (wm->non_redirection)
+            mb_wm_unredirect_client (wm, client);
 	}
 
       return True;
@@ -830,6 +874,9 @@ mb_wm_handle_map_notify   (XMapEvent  *xev,
 
   mb_wm_manage_client (wm, client, True);
   mb_wm_comp_mgr_map_notify (wm->comp_mgr, client);
+
+  if (wm->non_redirection)
+    mb_wm_unredirect_client (wm, client);
 
   return True;
 }
